--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(Numerical_Labs)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Numerical_Labs
-        "Lab 07/MatInversion.cpp")
+
+        "Lab 08/TranscendentalRegression.cpp")
